<resources>
    <string name="app_name">고사성어</string>
    <string name="main_activity_floating_button_description">next</string>
    <string name="bottom_app_bar_menuitem_share">공유</string>
    <string name="bottom_app_bar_menuitem_setting">설정</string>
    <string name="bottom_app_bar_menuitem_search">검색</string>
    <string name="bottom_app_bar_menuitem_sponsor">후원</string>
    <string name="bottom_app_bar_menuitem_today">오늘</string>

    <string name="close">닫기</string>
    <string name="setting_dialog_show_notification">알림보기</string>
    <string name="setting_dialog_configure_theme">테마설정하기</string>
    <string name="light">라이트</string>
    <string name="dark">다크</string>
    <string name="system">시스템</string>
    <string name="hide">가리기</string>
    <string name="show">보기</string>
    <string name="main_activity_bottom_navigation_view_button_today_badge_description">badge</string>
</resources>