<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_activity_scroll_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="?attr/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_activity_bottom_navigation_view_divider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/main_activity_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_activity_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="48sp"
                android:fontFamily="@font/notoserifhk_light" />

            <TextView
                android:id="@+id/main_activity_pronunciation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:fontFamily="@font/notoserifkr_regular"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/main_activity_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/notoserifkr_regular"
                android:gravity="center"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/main_activity_url"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/main_activity_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="8dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/main_activity_bottom_navigation_view_divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="?attr/dividerColor"
        app:layout_constraintStart_toEndOf="@id/main_activity_scroll_view"
        app:layout_constraintEnd_toStartOf="@id/main_activity_bottom_navigation_view" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/main_activity_bottom_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:backgroundTint="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:orientation="vertical">

<!--            <Button-->
<!--                android:id="@+id/main_activity_bottom_navigation_view_button_search"-->
<!--                style="?attr/materialIconButtonStyle"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:icon="@drawable/baseline_menu_24"-->
<!--                app:iconSize="20dp"-->
<!--                android:layout_marginTop="0dp"-->
<!--                android:layout_marginBottom="0dp" />-->

            <Button
                android:id="@+id/main_activity_bottom_navigation_view_button_today"
                style="?attr/materialIconButtonStyle"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/baseline_today_24"
                app:iconPadding="4dp"
                app:iconSize="16dp"
                app:iconGravity="top"
                android:textSize="16sp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/bottom_app_bar_menuitem_today" />

            <Button
                android:id="@+id/main_activity_bottom_navigation_view_button_share"
                style="?attr/materialIconButtonStyle"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/baseline_share_24"
                app:iconPadding="4dp"
                app:iconSize="16dp"
                app:iconGravity="top"
                android:textSize="16sp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/bottom_app_bar_menuitem_share" />

<!--            <Button-->
<!--                android:id="@+id/main_activity_bottom_navigation_view_button_sponsor"-->
<!--                style="?attr/materialIconButtonStyle"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:icon="@drawable/baseline_sponsor_24"-->
<!--                app:iconPadding="4dp"-->
<!--                app:iconSize="16dp"-->
<!--                app:iconGravity="top"-->
<!--                android:textSize="16sp"-->
<!--                android:layout_marginTop="0dp"-->
<!--                android:layout_marginBottom="0dp"-->
<!--                android:text="@string/bottom_app_bar_menuitem_sponsor" />-->

            <Button
                android:id="@+id/main_activity_bottom_navigation_view_button_setting"
                style="?attr/materialIconButtonStyle"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/baseline_settings_24"
                app:iconPadding="4dp"
                app:iconSize="16dp"
                app:iconGravity="top"
                android:textSize="16sp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/bottom_app_bar_menuitem_setting" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/main_activity_floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            app:srcCompat="@drawable/baseline_arrow_right_24"
            app:layout_anchor="@id/main_activity_bottom_navigation_view"
            app:backgroundTint="?attr/colorPrimaryVariant"
            app:rippleColor="?attr/colorSecondaryVariant"
            android:layout_marginBottom="16dp"
            app:elevation="1dp"
            android:contentDescription="@string/main_activity_floating_button_description" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>